Fix minor display issue where "Ready For" option with lots of characters is too big to fit on screen on mobile.
The layout was breaking in some specific cases where the content didn't fit on very small screens.

--- a/app/assets/stylesheets/darkswarm/_shop-navigation.css.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-navigation.css.scss
@@ -101,6 +101,11 @@ ordercycle {
       line-height: 1.5em;
       padding: 0.5em 1em;
       height: 2.35em;
+
+      span {
+        width: max-content;
+        display: block;
+      }
     }
 
     select {
@@ -123,6 +128,10 @@ ordercycle {
 
     @media all and (max-width: 768px) {
       float: none;
+    }
+
+    @media all and (max-width: 480px) {
+      display: flex;
     }
   }
 
